Fixed Slider issue: Aligned Cards Center.

--- a/src/Pages/Events/slider.css
+++ b/src/Pages/Events/slider.css
@@ -7,6 +7,9 @@
 .swiper-slide {
   background-position: center;
   background-size: cover;
-  width: 300px;
+  width: 320px;
   height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
